--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,7 @@
 [defaults]
-inventory = local.inventory
+
+inventory      = hosts
+# inventory = local.inventory
+roles_path    = roles
 retry_files_enabled = False
 stdout_callback = yaml
